crates/core/tests/snapshots/setting_merge_test__setting_merge__unnamed_struct__supports_func.snap
---
source: crates/core/tests/setting_merge_test.rs
expression: pretty(container.impl_partial_merge())
---
fn merge(
    &mut self,
    context: &Self::Context,
    mut next: Self,
) -> std::result::Result<(), schematic::ConfigError> {
    use schematic::internal::*;
    MergeManager::new(context)
        .apply(&mut self.0, next.0)?
        .apply(&mut self.1, next.1)?
        .apply_with(&mut self.2, next.2, discard)?
        .apply_with(&mut self.3, next.3, preserve)?
        .apply(&mut self.4, next.4)?
        .apply_with(&mut self.5, next.5, append_vec)?
        .apply_with(&mut self.6, next.6, merge_hashmap)?;
    Ok(())
}
