crates/core/tests/snapshots/setting_merge_test__setting_merge__unnamed_struct__supports_standard.snap
---
source: crates/core/tests/setting_merge_test.rs
expression: pretty(container.impl_partial_merge())
---
fn merge(
    &mut self,
    context: &Self::Context,
    mut next: Self,
) -> std::result::Result<(), schematic::ConfigError> {
    use schematic::internal::*;
    MergeManager::new(context)
        .apply(&mut self.0, next.0)?
        .apply(&mut self.1, next.1)?
        .apply(&mut self.2, next.2)?
        .apply(&mut self.3, next.3)?
        .apply(&mut self.4, next.4)?
        .apply(&mut self.5, next.5)?
        .apply(&mut self.6, next.6)?;
    Ok(())
}
